# ellie

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  RELEASE_NOTES.md
.cargo/: config.toml
.claude/commands/: build-linux-amd64-musl.md
.github/workflows/: build.yml  clippy.yml  test.yml
src/: app.rs  args.rs  main.rs  palette.rs
src/database/: mod.rs  queries_activity.rs  queries_dashboard.rs  queries_file_settings.rs  queries_settings.rs  queries_tuning.rs  utils.rs
src/tabs/: metric_history.rs  mod.rs  tab.rs  tab_about.rs  tab_activity.rs  tab_dashboard.rs  tab_file_settings.rs  tab_settings.rs  tab_tuning.rs
src/widgets/: mod.rs  section_activity.rs  section_instance.rs  section_sessions.rs  section_shared_buffers.rs  widget_chart.rs  widget_menu.rs  widget_section_title.rs  widget_simple_table.rs  widget_summary.rs  widget_table.rs  widget_text_box.rs
