[package]
name = "ellie"
version = "0.2.0"
edition = "2024"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
arguments = "0.8.0"
console = "0.15.10"
ratatui = "0.29.0"
postgres = "0.19.9"
postgres-inet = "0.19.0"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rustls-native-certs = "0.8"
tokio-postgres-rustls = "0.12"
tui-scrollview = "^0.5"


