[package]
name = "ellie"
version = "0.2.0"
edition = "2024"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
arguments = "0.8.0"
console = "0.16"
ratatui = "0.30"
postgres = "0.19"
postgres-inet = "0.19"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rustls-native-certs = "0.8"
tokio-postgres-rustls = "0.13"
tui-scrollview = "^0.6"


